# squish

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: converter.rs  lib.rs  main.rs
ui/: app.js  index.html  styles.css
