[package]
name = "squish"
version = "0.1.0"
description = "Squish — local image compression and conversion"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "squish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "tiff", "gif"] }
webp = "0.3"

# Zip extraction
zip = "2"

# Error handling
anyhow = "1"
